--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			}
 			.tableizer-table th {
 				background-color: rgb(0, 74, 173);
-				border-color: rgb(0, 74, 173);
+				border-color: white;
 				color: white; 
 				font-weight: bold;
 			}
