--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 			}
 			.tableizer-table th {
 				background-color: rgb(0, 74, 173);
-				border-color: white;
+				margin: 2px;
+				border: 1px solid #CCC;
 				color: white; 
 				font-weight: bold;
 			}
