--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 				border: 1px solid #CCC;
 				color: white; 
 				font-weight: bold;
+				text-align: center;
 			}
 			#zone {
 				background-color: rgb(0, 74, 173);
